2006-12-15  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* configure.in, configure, Doxyfile: Bump to 2.1.0b4 for upcoming snapshot.

	* src/*.cpp: Update class documentation (for many classes) to
	reflect <openbabel/header.h> syntax. Makes API documentation
	consistent with usage.

	* src/obconversion.cpp, src/obconversion.h: Enable on-the-fly line
	ending translation for input. Windows and Classic Mac files should
	now translate without problems. Right now, XML files are excluded
	through the new READXML flag.

	* src/formats/xml: Update for READXML flag and move of xml.h
	header.

	* include/openbabel/xml.h: Move header for public use.

	* src/formats/fastsearchformat.cpp: Add READBINARY flag.

	* include/openbabel/Makefile.am, Makefile.in: Fix "make dist"
	target to remove generated babelconfig.h header for snapshots and
	releases.

	* scripts/Makefile.am, scripts/Makefile.in: Make sure to clean
	java targets.

	* data/mm2.prm, data/Makefile.am, data/Makefile.in: MM2 parameters.

2006-12-15 Chris Morley <ob@gaseq.co.uk>

	* tools/babel.cpp, src/obconversion.cpp, src/formats/obmoleculeformat.h:
	Move -k option help info into OBConversion::Description, where it can
	be used by other front-ends. (The info in help() is specific to the
	command-line interface.) Register it as having no parameters.
	
2006-12-14  Donald E. Curtis <dcurtis3@sourceforge.net>

	* src/formats/gaussformat.cpp: Will export "model/basis,method" if keyword
	translation is enable however is not tested accurate.
	
	* src/formats/ghemicalformat.cpp: Re-wrote and tested the GAMESS keyword
	export.
	
	* src/formats/gamessformat.cpp: Modified keyword import operations.
	Should now import the model,basis,method for keywords it knows about.
	This method is all statically implemented.  We need a new way to do this
	translation such as OBKeyword class.
	
	* tools/babel.cpp: Added help information for the '-k' parameter which
	attempts to translation keywords along with molecule information.
